--- a/2025PyDay【Demo04】用AISuite打造員瑛式思考生成器.ipynb
+++ b/2025PyDay【Demo04】用AISuite打造員瑛式思考生成器.ipynb
@@ -536,33 +536,30 @@
         "                     provider = provider,\n",
         "                     model = model\n",
         "                    )\n",
-        "    return response"
-      ],
-      "metadata": {
-        "id": "zLDl07TnnNYq"
-      },
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "    return response\n",
+        "\n",
+        "def clear_textboxes():\n",
+        "    return \"\", \"\"\n",
+        "\n",
         "with gr.Blocks(title=\"員瑛式思考產生器\") as demo:\n",
-        "    gr.Markdown(\"### ꒰*ˊᵕˋ꒱ 員瑛式思考產生器 Lucky Vicky 🌈\")\n",
+        "    gr.Markdown(\"## ꒰*ˊᵕˋ꒱ 員瑛式思考產生器 Lucky Vicky 🌈\")\n",
         "    gr.Markdown(\"請輸入一件你覺得超小事，甚至有點倒楣的事，讓我幫你用員瑛式思考，超正向的方式重新詮釋！\")\n",
         "\n",
         "    with gr.Row():\n",
         "        user_input = gr.Textbox(label=\"今天發生的事情是…\", placeholder=\"例如：今天出門就下大雨, 可是忘了帶傘...\")\n",
         "\n",
         "    submit_btn = gr.Button(\"Lucky Vicky 魔法!\")\n",
+        "    clear_btn = gr.Button(\"清除魔法!\")\n",
         "    output = gr.Textbox(label=\"📣 員瑛式貼文\")\n",
         "\n",
-        "    submit_btn.click(fn=lucky_post, inputs=user_input, outputs=output)"
+        "    submit_btn.click(fn=lucky_post, inputs=user_input, outputs=output)\n",
+        "\n",
+        "    clear_btn.click(fn=clear_textboxes, inputs=[], outputs=[user_input, output])"
       ],
       "metadata": {
         "id": "tmoR7vCwlQF0"
       },
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -573,34 +570,54 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 612
+          "height": 647
         },
         "id": "qO91UeWzlTyV",
-        "outputId": "3ab50dae-af83-459c-a65c-5d4f27b48272"
+        "outputId": "b537c34b-ffdc-4506-fbfc-9d4d553502fd",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "* Running on public URL: https://8e0c3d934531c0c4fd.gradio.live\n",
+            "* Running on public URL: https://8f9b41924b0f5839f8.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/html": [
+              "<div><iframe src=\"https://8f9b41924b0f5839f8.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://8e0c3d934531c0c4fd.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keyboard interruption in main thread... closing server.\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://8f9b41924b0f5839f8.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 22
         }
       ]
     }
